nobase_include_HEADERS = omapip/alloc.h omapip/buffer.h omapip/convert.h \
			 omapip/hash.h omapip/omapip.h omapip/omapip_p.h \
			 omapip/trace.h \
			 isc-dhcp/boolean.h isc-dhcp/formatcheck.h \
			 isc-dhcp/lang.h isc-dhcp/mem.h isc-dhcp/result.h \
			 isc-dhcp/types.h isc-dhcp/commandline.h \
			 isc-dhcp/dst.h isc-dhcp/int.h isc-dhcp/list.h \
			 isc-dhcp/print.h isc-dhcp/string.h

EXTRA_DIST = cdefs.h ctrace.h dhcp.h dhcp6.h dhcpd.h dhctoken.h failover.h \
	     heap.h inet.h osdep.h site.h statement.h tree.h t_api.h \
	     arpa/nameser.h arpa/nameser_compat.h \
	     minires/minires.h minires/res_update.h minires/resolv.h \
	     netinet/if_ether.h netinet/ip.h netinet/ip_icmp.h netinet/udp.h

