AM_CPPFLAGS = -DMINIRES_LIB -DHMAC_MD5

noinst_LIBRARIES = libres.a

libres_a_SOURCES = res_mkupdate.c res_init.c res_update.c res_send.c \
		   res_comp.c res_sendsigned.c res_findzonecut.c res_query.c \
		   res_mkquery.c ns_date.c ns_parse.c ns_sign.c ns_name.c \
		   ns_samedomain.c ns_verify.c
